# multi-agent-game-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  VERSION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/agent_engine/: __init__.py  narrative_service.py
backend/multi_agent_game_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: action-extension-manual.zh-CN.md  development-manual.zh-CN.md  local-llm-mac-chain.zh-CN.md  mac-handoff.zh-CN.md  mac-installation.zh-CN.md  ppt-agent-engine-deck.zh-CN.md  recent-updates-2026-05-16.zh-CN.md  user-manual.zh-CN.md  windows-installation.zh-CN.md  windows-packaging.zh-CN.md
frontend/: docs.html  download-success.html  download.html  index.html  official.html  package-lock.json  package.json  playwright.config.ts  sponsor.html  tsconfig.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.tsx  docsPage.tsx  downloadPage.tsx  downloadSuccessPage.tsx  official.css  official.tsx  siteChrome.tsx  sponsorPage.tsx  styles.css  types.ts  vite-env.d.ts
frontend/tests/: rendering.spec.ts  sandbox.spec.ts
packaging/: agent-engine-backend.spec  agent_engine_backend.py
packaging/mac/: after-pack.cjs  install-multi-agent-engine.command  make-release-kit.cjs  (+2 more)
tests/: test_action_extensions.py  test_agent_region_movement.py  test_api.py  test_context_compressor.py  test_environment_ai.py  test_geometry_and_rules.py  test_model_provider.py  test_persistence.py  test_simulation.py
(+41 files in other folders)
